update detail doctor and schedule

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -38,6 +38,9 @@
             "manage-specialties": "Manage specialties",
             "handbook": "HandBook",
             "manage-handbook": "Manage HandBook"
+        },
+        "doctor": {
+            "doctor-schedule": "schedule Manage"
         }
     },
     "homeSection": {
