--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -42,6 +42,9 @@
             "manage-specialties": "Quản lý chuyên khoa",
             "handbook": "Cẩm nang",
             "manage-handbook": "Quản lý cẩm nang"
+        },
+        "doctor": {
+            "doctor-schedule": "Quản lý lịch khám bệnh"
         }
     },
     "form": {
